--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgba(25,25,27,1);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  mini-height:100vh;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.App:before {
+  content: "ANIME APP";
+  position: fixed;
+  top: 18vh;
+  left: 10vw;
+  font-size: 9vw;
+  color: rgba(255, 255, 255, 0.03);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 768px) {
+  .Home {
+    width: 640px;
+    height: 390px;
+    border-radius: 15px;
   }
 }
