--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,19 @@ Header:after {
   font-size: 11px;
   color: rgba(255, 255, 255, 0.5);
 }
-.AnimeLink{
+a.AnimeLink{
     text-decoration: none;
     cursor: pointer;
+}
+a:-webkit-any-link{
+    text-decoration:none !important;
+}
+.AnimeDetails{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+.AnimeDetailsPoster{
+    grid-column: 1;
+    grid-row: 1/ span 2;
 }
